--- a/android/styledictionary/teamwork-design-system/src/main/res/values-night/themes.xml
+++ b/android/styledictionary/teamwork-design-system/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <resources>
-    <style name="TeamworkM3Theme" parent="Theme.Material3.Dark.NoActionBar">
+    <style name="TeamworkTheme" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
