Android: Fix letter spacing values for XML typography

--- a/android/styledictionary/teamwork-design-system/src/main/res/values/typography.xml
+++ b/android/styledictionary/teamwork-design-system/src/main/res/values/typography.xml
@@ -16,7 +16,7 @@
   <style name="typography_display_small">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">36sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 
@@ -36,7 +36,7 @@
   <style name="typography_display_medium">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">45sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">7sp</item>
   </style>
 
@@ -56,7 +56,7 @@
   <style name="typography_display_large">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">57sp</item>
-    <item name="android:letterSpacing">0.96</item>
+    <item name="android:letterSpacing">-0.04</item>
     <item name="android:lineSpacingExtra">7sp</item>
   </style>
 
@@ -76,7 +76,7 @@
   <style name="typography_headline_small">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">24sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 
@@ -96,7 +96,7 @@
   <style name="typography_headline_medium">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">28sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 
@@ -116,7 +116,7 @@
   <style name="typography_headline_large">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">32sp</item>
-    <item name="android:letterSpacing">0.98</item>
+    <item name="android:letterSpacing">-0.02</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 
@@ -136,7 +136,7 @@
   <style name="typography_title_small">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">14sp</item>
-    <item name="android:letterSpacing">0.98</item>
+    <item name="android:letterSpacing">-0.02</item>
     <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
@@ -156,7 +156,7 @@
   <style name="typography_title_medium">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">16sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 
@@ -176,7 +176,7 @@
   <style name="typography_title_large">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">22sp</item>
-    <item name="android:letterSpacing">0.98</item>
+    <item name="android:letterSpacing">-0.02</item>
     <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
@@ -196,7 +196,7 @@
   <style name="typography_label_small">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">11sp</item>
-    <item name="android:letterSpacing">1</item>
+    <item name="android:letterSpacing">0</item>
     <item name="android:lineSpacingExtra">5sp</item>
   </style>
 
@@ -216,7 +216,7 @@
   <style name="typography_label_medium">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">12sp</item>
-    <item name="android:letterSpacing">0.99</item>
+    <item name="android:letterSpacing">-0.01</item>
     <item name="android:lineSpacingExtra">4sp</item>
   </style>
 
@@ -236,7 +236,7 @@
   <style name="typography_label_large">
     <item name="android:fontFamily">Poppins</item>
     <item name="android:textSize">14sp</item>
-    <item name="android:letterSpacing">0.97</item>
+    <item name="android:letterSpacing">-0.03</item>
     <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
@@ -256,7 +256,7 @@
   <style name="typography_body_small">
     <item name="android:fontFamily">Roboto</item>
     <item name="android:textSize">12sp</item>
-    <item name="android:letterSpacing">0.4</item>
+    <item name="android:letterSpacing">0.03333333333333333</item>
     <item name="android:lineSpacingExtra">4sp</item>
   </style>
 
@@ -276,7 +276,7 @@
   <style name="typography_body_medium">
     <item name="android:fontFamily">Roboto</item>
     <item name="android:textSize">14sp</item>
-    <item name="android:letterSpacing">0.25</item>
+    <item name="android:letterSpacing">0.017857142857142856</item>
     <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
@@ -296,7 +296,7 @@
   <style name="typography_body_large">
     <item name="android:fontFamily">Roboto</item>
     <item name="android:textSize">16sp</item>
-    <item name="android:letterSpacing">0.5</item>
+    <item name="android:letterSpacing">0.03125</item>
     <item name="android:lineSpacingExtra">8sp</item>
   </style>
 </resources>
